# modal_downsampling

./: .gitignore  CMakeLists.txt  README.md
doc/: QuestionAnswers.txt  README.txt
include/: modal_downsample.hpp
src/: modal_downsample.cpp  performance_parameters.hpp
test/: CMakeLists.txt  test_downsample_0d.cpp  test_downsample_1d.cpp  test_example1.cpp
